# doin-plugins

./: .gitignore  README.md  pyproject.toml
examples/: run_predictor_network.py
src/doin_plugins/: __init__.py  quadratic_inferencer.py  quadratic_optimizer.py  quadratic_synthetic.py
src/doin_plugins/predictor/: __init__.py  inferencer.py  optimizer.py  synthetic.py
tests/: test_e2e_lifecycle.py  test_integration.py  test_network_integration.py  test_plugins.py  test_predictor_plugins.py  test_task_queue_integration.py
